--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/achamwada/ichat-backend#readme",
   "dependencies": {
+    "@types/express": "^4.17.0",
+    "@types/node": "^12.0.10",
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.1",
     "config": "^3.1.0",
@@ -33,8 +35,10 @@
     "express-validator": "^6.0.1",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.6.0",
     "nodemon": "^1.19.1",
-    "socket.io": "^2.2.0"
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2"
   }
 }
