--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Alexander Chamwada",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.0",
+    "@types/node": "^12.0.10",
     "bcryptjs": "^2.4.3",
     "config": "^3.1.0",
     "express": "^4.17.1",
@@ -18,6 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.6.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2"
   }
 }
