--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express-validator": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "nodemon": "^1.19.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
