--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon server.js"
+    "serve": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run serve\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -25,15 +27,13 @@
   "homepage": "https://github.com/achamwada/ichat-backend#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^4.1.1",
     "config": "^3.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
-    "socket.io": "^2.2.0",
-    "nodemon": "^1.19.1"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "socket.io": "^2.2.0"
   }
 }
