--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,7 @@
     "react": "^16.8.6",
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.8.6",
-<<<<<<< HEAD
     "react-grid-gallery": "^0.5.5",
-=======
->>>>>>> 72b2efb... cleaning
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-window": "^1.8.5",
@@ -49,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://192.168.1.232:5000"
 }
