--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.2.0",
-<<<<<<< HEAD
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
-=======
->>>>>>> 95a0bf0... friends setup
     "@types/jest": "24.0.15",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.4",
-<<<<<<< HEAD
     "@types/react-window": "^1.8.0",
     "axios": "^0.19.0",
     "formik": "^1.5.8",
@@ -23,19 +19,7 @@
     "react": "^16.8.6",
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.8.6",
-    "react-grid-gallery": "^0.5.5",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "react-window": "^1.8.5",
-    "typescript": "^3.5.3"
-=======
-    "axios": "^0.19.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "typescript": "3.5.2"
->>>>>>> 95a0bf0... friends setup
+    "react-grid-gallery": "^0.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,9 +42,5 @@
       "last 1 safari version"
     ]
   },
-<<<<<<< HEAD
-  "proxy": "http://192.168.1.232:5000"
-=======
   "proxy": "http://localhost:5000"
->>>>>>> 95a0bf0... friends setup
 }
