--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "config": "^3.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.0.1",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
     "nodemon": "^1.19.1",
