--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,17 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/react-window": "^1.8.0",
     "axios": "^0.19.0",
+    "formik": "^1.5.8",
+    "moment": "^2.24.0",
+    "radium": "^0.25.2",
     "react": "^16.8.6",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^16.8.6",
+    "react-grid-gallery": "^0.5.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-window": "^1.8.5",
-    "typescript": "3.5.2"
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
