--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/react-window": "^1.8.0",
     "axios": "^0.19.0",
+    "radium": "^0.25.2",
     "react": "^16.8.6",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
