--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/react-window": "^1.8.0",
     "axios": "^0.19.0",
+    "formik": "^1.5.8",
     "radium": "^0.25.2",
     "react": "^16.8.6",
     "react-coverflow": "^0.2.20",
