--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-window": "^1.8.5",
-    "typescript": "3.5.2"
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
