--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,11 @@
     "react": "^16.8.6",
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.8.6",
-    "react-grid-gallery": "^0.5.5"
+    "react-grid-gallery": "^0.5.5",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-window": "^1.8.5",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
