--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-window": "^1.8.0",
     "axios": "^0.19.0",
     "formik": "^1.5.8",
+    "material-table": "^1.40.1",
     "moment": "^2.24.0",
     "radium": "^0.25.2",
     "react": "^16.8.6",
