--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
@@ -13,7 +18,9 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/react-window": "^1.8.0",
     "axios": "^0.19.0",
+    "date-fns": "^2.0.0-alpha.27",
     "formik": "^1.5.8",
+    "material-table": "^1.40.1",
     "moment": "^2.24.0",
     "radium": "^0.25.2",
     "react": "^16.8.6",
