--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/achamwada/ichat-backend#readme",
   "dependencies": {
+    "@types/react-redux": "^7.1.1",
+    "@types/redux": "^3.6.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.1",
     "config": "^3.1.0",
@@ -35,6 +37,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
     "nodemon": "^1.19.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0"
   }
 }
