--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@types/react-redux": "^7.1.1",
     "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.1",
     "config": "^3.1.0",
@@ -39,6 +40,7 @@
     "nodemon": "^1.19.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0"
   }
